# cqrs-demo

./: .env  Cargo.toml  Dockerfile
src/: config.rs  main.rs  queries.rs  state.rs
