[package]
name = "cqrs-demo"
version = "0.4.10"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A demo application for cqrs-es crate."
documentation = "https://docs.rs/cqrs-demo"
repository = "https://github.com/serverlesstechnology/cqrs-demo"
readme = "README.md"
publish = false
default-run = "cqrs-demo"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies]
cqrs-es = "0.4.10"
nats-es = { git = "https://github.com/andrewwebber/nats-es", branch = "main" }

async-trait = "0.1"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.4"

async-nats = "0.34.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
envy = "0.4.2"

[[bin]]
name = "cqrs-demo"
path = "src/main.rs"
